# rival-map

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  create_indexes.sql  create_materialized_views.sql  pyproject.toml  refresh_materialized_views.sql  setup_database.sql  test_api.bat
backend/app/: cache.py  database.py  graph_service.py  main.py  model.py
backend/scripts/: generate_static_data.py
backend/static_data/: .gitignore
backend/static_data/network/: .gitkeep
backend/tests/: conftest.py  test_api.py  test_cache.py  test_graph_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css  types.ts
frontend/src/algorithms/: graph.ts
frontend/src/config/: sigmaConfig.ts
frontend/src/services/: graphBuilder.ts  interactionService.ts  panelService.ts  rendererService.ts
frontend/src/state/: appState.ts
frontend/src/utils/: color.ts  community.ts  communityUI.ts  formatters.ts
