[project]
name = "rival-map-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.2.2",
    "redis>=5.2.0",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
r2 = ["boto3>=1.36.0"]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
